Fix alignment menu item mobile menu

--- a/src/app/components/app-layout/app-layout.component.scss
+++ b/src/app/components/app-layout/app-layout.component.scss
@@ -168,6 +168,9 @@
     display: flex;
     align-items: flex-start;
     margin-left: auto;
+    @include media-breakpoint-down(sm) {
+      margin-left: 0px;
+    }
   }
 
   .profile {
